# rustle

./: .dockerignore  .env  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Latest Docker CI.yml  Legacy Docker CI.yml  rust-ci.yml
docker/: Dockerfile
docker/etc/nginx/: nginx.conf
docker/etc/nginx/conf.d/: default.conf
legacy/: README.md
public/: manifest.json
src/: App.tsx  index.css
src/components/grid/: Cell.tsx  Grid.tsx
src/components/keyboard/: Key.tsx  Keyboard.tsx
src/components/modals/: BaseModal.tsx  SettingsModal.tsx  SettingsToggle.tsx  StatsModal.tsx
src/components/navbar/: Navbar.tsx
src/lib/: share.ts  statuses.ts  words.ts
wordle-engine/: Cargo.toml
wordle-engine/benches/: engine_benchmarks.rs
wordle-engine/proptest-regressions/: prop_tests.txt
wordle-engine/src/: lib.rs  prop_tests.rs  tests.rs  words.rs
wordle-server/: Cargo.toml
wordle-server/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs
wordle-server/tests/: api_tests.rs
wordle-ui/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
wordle-ui/public/: global-stats.json  manifest.json  sw.js
wordle-ui/src/: api.rs  app.rs  app_helpers.rs  app_logic.rs  app_on_key.rs  board.rs  comments.rs  components.rs  header.rs  keyboard.rs  main.rs  modals.rs  modals_core.rs  sidebar.rs  state.rs
wordle-ui/style/: tailwind.css
