[workspace]
members = [
    "wordle-engine", "wordle-server",
    "wordle-ui"
]
resolver = "2"

[workspace.package]
version = "2.3.0"
edition = "2021"

[workspace.metadata.rustfmt]
edition = "2021"
max_width = 100

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
strip = true

[profile.bench]
opt-level = 3
lto = true
