[package]
name = "wordle-engine"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
unicode-segmentation = "1.12.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde-wasm-bindgen = "0.6.5"
once_cell = "1.20.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
