[package]
name = "wordle-engine"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
unicode-segmentation = "1.12"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
once_cell = "1.20"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
proptest = "1"

[[bench]]
name = "engine_benchmarks"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
