[package]
name = "wordle-server"
version = "2.0.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tower_governor = "0.3.2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
