[package]
name = "wordle-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tower_governor = "0.3.2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
dotenvy = "0.15"
