[package]
name = "wordle-ui"
version.workspace = true
edition.workspace = true

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wordle-engine = { path = "../wordle-engine" }
console_error_panic_hook = "0.1"
gloo-timers = "0.3"
chrono = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Storage", "Window", "Document", "Element", "HtmlElement", "Navigator", "Clipboard", "Request", "RequestInit", "Response"] }
