[package]
name = "wordle-ui"
version.workspace = true
edition.workspace = true

[dependencies]
leptos = { version = "0.6.15", features = ["csr"] }
wordle-engine = { path = "../wordle-engine" }
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3.0"
chrono = "0.4.39"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["Storage", "Window", "Document", "Element", "HtmlElement", "Navigator", "Clipboard", "Request", "RequestInit", "Response"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
